# django-storagecellar

./: .bumpversion.cfg  .gitignore  LICENSE  Makefile  README.rst  conftest.py  demo_project.py  setup.cfg  setup.py  test_settings.py  test_urls.py
storagecellar/: __init__.py
test_app/: admin.py  models.py  storages.py
test_app/migrations/: 0001_initial.py  0002_auto_20151111_1408.py  0003_auto_20151111_1408.py  0004_auto_20151111_1402.py
